# vd

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  demo_backend_discovery.py  demo_comparison.py  demo_config.py  demo_utilities.py  example_usage.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html
.claude/: CLAUDE.md
.claude/skills/: vd-add-backend  vd-backend-choose  vd-ingest  vd-ops  vd-quickstart  vd-search
.claude/skills/vd-add-backend/: SKILL.md
.github/workflows/: ci.yml
_modules/: index.html  vd.html
_modules/vd/: analytics.html  asynchronous.html  base.html  cli.html  compare.html  config.html  crude.html  filters.html  health.html  io.html  migration.html  providers.html  requirements.html  search.html  text.html  time_indexed.html  util.html
_modules/vd/backends/: _helpers.html  memory.html
_modules/vd/wip/: input_sourcing.html  input_wire.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: vd.rst.txt
_sources/module_docs/vd/: analytics.rst.txt  asynchronous.rst.txt  backends.rst.txt  base.rst.txt  cli.rst.txt  compare.rst.txt  config.rst.txt  crude.rst.txt  dog.rst.txt  filters.rst.txt  health.rst.txt  io.rst.txt  migration.rst.txt  providers.rst.txt  requirements.rst.txt  search.rst.txt  text.rst.txt  time_indexed.rst.txt  util.rst.txt  wip.rst.txt
_sources/module_docs/vd/backends/: _helpers.rst.txt  chroma.rst.txt  duckdb.rst.txt  elasticsearch.rst.txt  faiss.rst.txt  lancedb.rst.txt  memory.rst.txt  milvus.rst.txt  mongodb.rst.txt  pgvector.rst.txt  pinecone.rst.txt  qdrant.rst.txt  redis.rst.txt  sqlite_vec.rst.txt  turbopuffer.rst.txt  weaviate.rst.txt
_sources/module_docs/vd/wip/: input_sourcing.rst.txt  input_wire.rst.txt
misc/: imbed.py.md  oa.py.md  vd_dog_wip.ipynb  vd_key_takeaways.md  vd_wip.ipynb
misc/docs/: 11 -- VectorDB Selection & Setup Guide -- Provider Profiles, Decision Framework, and Installation Playbooks.md  notes_for_possible_improvements.md  vd_design_notes.md  vd_specification.md  vd_use_cases.md
misc/examples/: demo_backend_discovery.py
module_docs/: vd.html
module_docs/vd/: analytics.html  asynchronous.html  backends.html  base.html  cli.html  compare.html  config.html  crude.html  dog.html  filters.html  health.html  io.html  migration.html  providers.html  requirements.html  search.html  text.html  time_indexed.html  util.html  wip.html
module_docs/vd/backends/: _helpers.html  chroma.html  duckdb.html  elasticsearch.html  faiss.html  lancedb.html  memory.html  milvus.html  mongodb.html  pgvector.html  pinecone.html  qdrant.html  redis.html  sqlite_vec.html  turbopuffer.html  weaviate.html
module_docs/vd/wip/: input_sourcing.html  input_wire.html
tests/: README.md  __init__.py  conftest.py  docker-compose.yml  test_async.py  test_contract.py  test_core.py  test_filters.py  test_hybrid.py  test_providers.py  test_time_indexed.py
vd/: __init__.py  analytics.py  asynchronous.py  base.py  cli.py  compare.py  config.py  crude.py  dog.py  filters.py  health.py  io.py  migration.py  providers.py  requirements.py  search.py  text.py  time_indexed.py  util.py
vd/backends/: __init__.py  _helpers.py  chroma.py  duckdb.py  elasticsearch.py  faiss.py  lancedb.py  memory.py  milvus.py  mongodb.py  pgvector.py  pinecone.py  qdrant.py  redis.py  sqlite_vec.py  turbopuffer.py  weaviate.py
vd/data/: providers.yaml
vd/data/skills/vd-backend-choose/: SKILL.md
vd/data/skills/vd-ingest/: SKILL.md
vd/data/skills/vd-ops/: SKILL.md
vd/data/skills/vd-quickstart/: SKILL.md
vd/data/skills/vd-search/: SKILL.md
vd/tests/: test_crude.py  test_crudify_based_on_names.py  test_dog.py  test_dog_with_local_stores.py  test_input_sourcing.py  test_input_wire.py  test_output_store.py  test_w_depinject.py
vd/wip/: crude.py  dog.py  input_sourcing.py  input_wire.py  w_depinject.py
