[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "vd"
version = "0.1.0"
description = "Facades for VectorDBs"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = []
dependencies = [
    "dol>=0.2.0",
    "imbed>=0.0.10",
]

[project.license]
text = "mit"

[project.urls]
Homepage = "https://github.com/i2mint/vd"

[project.optional-dependencies]
chromadb = [
    "chromadb>=0.4.0",
]
langchain = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.1",
]
all = [
    "vd[chromadb,langchain]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = [
    "D100",
]
ignore = [
    "D203",
    "E501",
    "B905",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",
]
"examples/*" = [
    "D",
]
"scrap/*" = [
    "D",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]
