[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vd"
version = "0.2.1"
description = "A facade over vector databases — one interface, ~15 backends"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["vector database", "vector search", "embeddings", "facade", "ANN"]
authors = []
# The core is deliberately near-zero-dependency: it operates on vectors and
# stdlib mappings. Embedding is external; each backend's client is an extra.
dependencies = ["pyyaml>=6.0"]

[project.license]
text = "mit"

[project.urls]
Homepage = "https://github.com/i2mint/vd"

[project.scripts]
vd = "vd.cli:main"

[project.optional-dependencies]
# One extra per backend — `pip install vd[qdrant]` installs that client.
chroma = ["chromadb>=0.4.0"]
qdrant = ["qdrant-client"]
faiss = ["faiss-cpu", "numpy"]
lancedb = ["lancedb"]
sqlite_vec = ["sqlite-vec"]
duckdb = ["duckdb"]
pgvector = ["pgvector", "psycopg[binary]"]
pinecone = ["pinecone"]
weaviate = ["weaviate-client"]
milvus = ["pymilvus", "milvus-lite ; platform_system != 'Windows'"]
redis = ["redis", "numpy"]
elasticsearch = ["elasticsearch"]
mongodb = ["pymongo"]
turbopuffer = ["turbopuffer"]
# Convenience bundles.
embedded = ["vd[chroma,qdrant,faiss,lancedb,sqlite_vec,duckdb]"]
all-backends = [
    "vd[chroma,qdrant,faiss,lancedb,sqlite_vec,duckdb,pgvector,pinecone,weaviate,milvus,redis,elasticsearch,mongodb,turbopuffer]",
]
config = ["tomli>=2.0.0; python_version < '3.11'", "tomli-w>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "tomli-w>=1.0.0",
    # the backends exercised by the parametrized test suite
    "chromadb>=0.4.0",
    "qdrant-client",
    "faiss-cpu",
    "numpy",
    "lancedb",
    "duckdb",
    "sqlite-vec",
]
docs = ["sphinx>=6.0", "sphinx-rtd-theme>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["vd"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = ["D100"]
ignore = ["D203", "E501", "B905"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["D"]
"**/examples/*" = ["D"]
"**/scrap/*" = ["D"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[tool.wads.ci]
installer = "uv"

[tool.wads.ci.testing]
python_versions = ["3.10", "3.12"]
pytest_args = ["-v", "--tb=short"]
coverage_enabled = true
exclude_paths = ["examples", "scrap"]
test_on_windows = true

[tool.wads.ci.build]
sdist = true
wheel = true
